--- a/index.html
+++ b/index.html
@@ -3,34 +3,53 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DP Design – AI T‑Shirt Mockups (with Debug)</title>
+  <title>DP Design – AI T‑Shirt Mockups (with Network Debug)</title>
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif;margin:0;background:#0f2238;color:#e7f0fa}
+    :root{--bg:#0f2238;--card:#0a1b2d;--muted:#9fb3c8;--accent:#ffb95a}
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif;margin:0;background:var(--bg);color:#e7f0fa}
     header{padding:24px 16px;text-align:center}
-    main{max-width:950px;margin:0 auto;padding:16px}
-    .card{background:#0a1b2d;border:1px solid rgba(255,255,255,.1);border-radius:14px;padding:16px}
+    main{max-width:980px;margin:0 auto;padding:16px}
+    .card{background:var(--card);border:1px solid rgba(255,255,255,.12);border-radius:14px;padding:16px}
     .row{display:grid;gap:10px;grid-template-columns:1fr 1fr}
     input,button{padding:12px 14px;border-radius:10px;border:1px solid rgba(255,255,255,.15);background:#0f2238;color:#e7f0fa}
-    button{cursor:pointer;font-weight:700;background:#ffb95a;color:#1c1300;border:none}
-    .muted{color:#9fb3c8;font-size:13px}
+    button{cursor:pointer;font-weight:700;background:var(--accent);color:#1c1300;border:none}
+    .muted{color:var(--muted);font-size:13px}
     #out{display:grid;gap:12px;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));margin-top:14px}
     img{width:100%;border-radius:10px}
-    .debug{white-space:pre-wrap;background:#061427;border:1px solid rgba(255,255,255,.12);padding:12px;border-radius:10px;margin-top:10px;max-height:300px;overflow:auto;font-family:ui-monospace,Menlo,Consolas,monospace;font-size:12px}
+    .debug{white-space:pre-wrap;background:#061427;border:1px solid rgba(255,255,255,.12);padding:12px;border-radius:10px;margin-top:10px;max-height:320px;overflow:auto;font-family:ui-monospace,Menlo,Consolas,monospace;font-size:12px}
+    .warn{background:#3a1f1f;border-color:#723}
     label{display:block;margin-top:8px;font-weight:600}
+    .grid-3{display:grid;grid-template-columns:1fr 1fr 1fr;gap:10px}
+    .chips{display:flex;flex-wrap:wrap;gap:8px;margin-top:8px}
+    .chip{font-size:12px;border:1px solid rgba(255,255,255,.18);padding:4px 8px;border-radius:999px;color:var(--muted)}
   </style>
 </head>
 <body>
   <header>
     <h1>DP Design — Upload & Generate T‑Shirt Mockups</h1>
-    <p class="muted">If you see <em>Unexpected token '<'</em>, your API is returning HTML (e.g., a 404 page) instead of JSON. Use the API URL box below to point at your live backend.</p>
+    <p class="muted">If you get <b>“Failed to fetch”</b>, it usually means a network/CORS block before the server could reply. Use the checks below to pinpoint it.</p>
   </header>
+
   <main>
+    <!-- API configuration -->
     <section class="card" style="margin-bottom:16px">
-      <label for="api">API URL (must return JSON)</label>
+      <label for="api">API URL (must be your deployed backend that returns JSON)</label>
       <input id="api" placeholder="/api/generate (same project) or https://your-app.vercel.app/api/generate" />
-      <div class="muted">Tip: Test your URL in a new tab — you should NOT see an HTML page. You should see JSON like {"error":"Method Not Allowed"} unless you POST.</div>
+      <div id="apiHints" class="chips">
+        <span class="chip">Use <b>HTTPS</b> if this page is https</span>
+        <span class="chip">Path must end with <b>/api/generate</b></span>
+        <span class="chip">Open in a tab: should show JSON (e.g. {"error":"Method Not Allowed"})</span>
+      </div>
+      <div id="mixedWarn" class="debug warn" style="display:none"></div>
+      <div class="grid-3" style="margin-top:10px">
+        <button id="btnOpen">Open API in new tab</button>
+        <button id="btnPing">Test API (POST JSON)</button>
+        <button id="btnOptions">Check CORS (OPTIONS)</button>
+      </div>
+      <div class="debug" id="diag">(diagnostics will appear here)</div>
     </section>
 
+    <!-- Generator UI -->
     <section class="card">
       <div class="row">
         <input id="prompt" placeholder="Describe your tee… e.g. retro surf, pastel, vector" />
@@ -43,7 +62,7 @@
       <div id="status" class="muted" style="margin-top:8px"></div>
       <div id="out"></div>
       <details style="margin-top:12px">
-        <summary>Debug response</summary>
+        <summary>Response JSON</summary>
         <div class="debug" id="debugBox">(nothing yet)</div>
       </details>
     </section>
@@ -52,15 +71,97 @@
   <script>
     const apiInput = document.querySelector('#api');
     const file = document.querySelector('#file');
-    const prompt = document.querySelector('#prompt');
+    const promptEl = document.querySelector('#prompt');
     const out = document.querySelector('#out');
     const statusEl = document.querySelector('#status');
     const debugBox = document.querySelector('#debugBox');
+    const diag = document.querySelector('#diag');
+    const mixedWarn = document.querySelector('#mixedWarn');
 
-    // Default to same-project API
+    // Prefill API (same-project by default)
     apiInput.value = localStorage.getItem('dp_api_url') || '/api/generate';
     apiInput.addEventListener('change', () => {
       localStorage.setItem('dp_api_url', apiInput.value.trim());
+      checkMixedContent();
+    });
+
+    function checkMixedContent(){
+      const url = apiInput.value.trim();
+      const pageHttps = location.protocol === 'https:';
+      const isHttp = url.startsWith('http://');
+      if (pageHttps && isHttp) {
+        mixedWarn.style.display = 'block';
+        mixedWarn.textContent = 'Mixed content: This page is HTTPS but your API URL is HTTP. Browsers will block it. Use HTTPS.';
+      } else {
+        mixedWarn.style.display = 'none';
+        mixedWarn.textContent = '';
+      }
+    }
+    checkMixedContent();
+
+    function logDiag(title, details){
+      const time = new Date().toLocaleTimeString();
+      const block = `\n[${time}] ${title}\n${details}`;
+      diag.textContent = (diag.textContent || '') + block;
+      diag.scrollTop = diag.scrollHeight;
+    }
+
+    function withTimeout(ms){
+      const ctrl = new AbortController();
+      const id = setTimeout(()=>ctrl.abort(new Error('timeout')), ms);
+      return { signal: ctrl.signal, done: () => clearTimeout(id) };
+    }
+
+    document.querySelector('#btnOpen').addEventListener('click', () => {
+      const url = apiInput.value.trim();
+      if (!url) return;
+      window.open(url, '_blank');
+    });
+
+    document.querySelector('#btnPing').addEventListener('click', async () => {
+      const url = apiInput.value.trim();
+      if (!url) return alert('Enter API URL first');
+      const { signal, done } = withTimeout(20000);
+      try {
+        const r = await fetch(url, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ prompt: 'ping from DP Design debug' }),
+          mode: 'cors',
+          signal
+        });
+        done();
+        const ct = (r.headers.get('content-type')||'').toLowerCase();
+        if (!ct.includes('application/json')) {
+          const text = await r.text();
+          logDiag('Ping: Non-JSON response', `Status: ${r.status} ${r.statusText}\nCT: ${ct}\nBody (first 1000):\n${text.slice(0,1000)}`);
+          alert('Ping returned non-JSON. Check that /api/generate exists on your backend.');
+          return;
+        }
+        const data = await r.json();
+        logDiag('Ping OK', JSON.stringify(data, null, 2));
+        alert('Ping OK: backend responded with JSON. Now try Generate.');
+      } catch (e){
+        logDiag('Ping network error', `${e?.name||'Error'}: ${e?.message||e}`);
+        alert('Ping failed to reach the server. This is usually CORS, DNS, bad URL, or HTTPS mismatch.');
+      }
+    });
+
+    document.querySelector('#btnOptions').addEventListener('click', async () => {
+      const url = apiInput.value.trim();
+      if (!url) return alert('Enter API URL first');
+      // Try OPTIONS preflight (servers may not respond, but if they do we learn CORS headers)
+      const { signal, done } = withTimeout(15000);
+      try {
+        const r = await fetch(url, { method: 'OPTIONS', mode: 'cors', signal });
+        done();
+        const headers = Array.from(r.headers.entries()).map(([k,v])=>`${k}: ${v}`).join('\n');
+        logDiag('OPTIONS response', `Status: ${r.status} ${r.statusText}\n${headers}`);
+        alert('OPTIONS completed. Check diagnostics for Access-Control-* headers.');
+      } catch (e){
+        logDiag('OPTIONS network error', `${e?.name||'Error'}: ${e?.message||e}`);
+        alert('OPTIONS failed (many servers don\'t allow manual OPTIONS). If Generate still fails, it\'s likely CORS.');
+      }
     });
 
     document.querySelector('#go').addEventListener('click', async () => {
@@ -70,38 +171,43 @@
 
       const fd = new FormData();
       if (file.files[0]) fd.append('image', file.files[0]);
-      if (prompt.value.trim()) fd.append('prompt', prompt.value.trim());
-
+      if (promptEl.value.trim()) fd.append('prompt', promptEl.value.trim());
       const API = apiInput.value.trim() || '/api/generate';
 
+      const { signal, done } = withTimeout(60000);
       try {
-        const r = await fetch(API, { method: 'POST', body: fd });
+        const r = await fetch(API, { method: 'POST', body: fd, mode: 'cors', signal });
+        done();
         const ct = (r.headers.get('content-type') || '').toLowerCase();
-
-        // If not JSON, show the text body to explain the error (HTML 404/500, etc.)
         if (!ct.includes('application/json')) {
           const text = await r.text();
           debugBox.textContent = `URL: ${API}\nStatus: ${r.status} ${r.statusText}\nContent-Type: ${ct}\n\n${text.slice(0, 4000)}`;
-          throw new Error("Backend returned non‑JSON (likely an HTML error page). Check the API URL and that /api/generate exists.");
+          throw new Error('Backend returned non‑JSON (likely an HTML error page or proxy).');
         }
-
         const data = await r.json();
         debugBox.textContent = JSON.stringify(data, null, 2);
-
         if (!r.ok) throw new Error(data?.error || 'request failed');
         const images = Array.isArray(data.images) ? data.images : [];
-        if (!images.length) throw new Error('No images returned. Try a simpler prompt or a faster/compatible model.');
+        if (!images.length) throw new Error('No images returned. Try a simpler prompt or switch models.');
         out.innerHTML = images.map(u => `<img src="${u}" alt="mockup" />`).join('');
         statusEl.textContent = 'Done!';
       } catch (e) {
         statusEl.textContent = 'Error: ' + (e?.message || e);
+        // Extra hints for classic causes
+        const url = apiInput.value.trim();
+        const pageHttps = location.protocol === 'https:';
+        const isHttp = url.startsWith('http://');
+        if (pageHttps && isHttp) {
+          logDiag('Hint', 'Mixed content: API is http:// but page is https:// — browser blocks it. Use HTTPS.');
+        }
+        logDiag('Generate error', `${e?.name||'Error'}: ${e?.message||e}`);
       }
     });
 
     document.querySelector('#clear').addEventListener('click', () => {
       out.innerHTML = '';
       statusEl.textContent = '';
-      prompt.value = '';
+      promptEl.value = '';
       file.value = '';
       debugBox.textContent = '(nothing yet)';
     });
